@@ -29,7 +29,7 @@ int FileSystem::execute_command( const Glib::ustring & command, OperationDetail 
 {
 	operationdetail .add_child( OperationDetail( command, STATUS_NONE, FONT_BOLD_ITALIC ) ) ;
 
-	int exit_status = Utils::execute_command( command, output, error ) ;
+	int exit_status = Utils::execute_command( "nice -n 19 " + command, output, error ) ;
 
 	if ( ! output .empty() )
 		operationdetail .get_last_child() .add_child( OperationDetail( output, STATUS_NONE, FONT_ITALIC ) ) ;
