@@ -38,24 +38,24 @@ OperationDetail::OperationDetail( const Glib::ustring & description, OperationDe
 
 void OperationDetail::set_description( const Glib::ustring & description, Font font )
 {
-	 switch ( font )
-	 {
-		 case FONT_NORMAL:
+	switch ( font )
+	{
+		case FONT_NORMAL:
 	 		this ->description = Glib::Markup::escape_text( description ) ;
 		 	break ;
-		 case FONT_BOLD:
+		case FONT_BOLD:
 	 		this ->description = "<b>" + Glib::Markup::escape_text( description ) + "</b>" ;
 		 	break ;
-		 case FONT_ITALIC:
+		case FONT_ITALIC:
 	 		this ->description = "<i>" + Glib::Markup::escape_text( description ) + "</i>" ;
 		 	break ;
-		 case FONT_BOLD_ITALIC:
+		case FONT_BOLD_ITALIC:
 	 		this ->description = "<b><i>" + Glib::Markup::escape_text( description ) + "</i></b>" ;
 		 	break ;
-	 }
+	}
 
-	 if ( ! treepath .empty() )
-		 on_update( *this ) ;
+	if ( ! treepath .empty() )
+		on_update( *this ) ;
 }
 
 Glib::ustring OperationDetail::get_description() const
