@@ -1,3 +1,10 @@
+2006-08-21 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* src/FileSystem.cc: added nice -n 19, so that all extensive
+	  filesystemoperations will be 'nice' :)
+	* src/OperationDetail.cc,
+	  src/Utils.cc: cleanups 
+
 2006-08-20 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* src/Dialog_Progress.cc: enabled set_do_overwrite_confirmation() for
